# CMakeTemplates

./: CMakeLists.txt  README.md
cmake/: AssetUtilities.cmake  BoilerPlate.cmake  UtilityFunctions.cmake
engine/src/: engine.h  renderer.c
ext/fake_SDL2/: SDL_main.c
game/src/: main.c
prebuilt/: SDL2Config.cmake  SDL2ConfigVersion.cmake
prebuilt/include/SDL2/: SDL.h
prebuilt/macosx/: libSDL2.dylib
prebuilt/win32/: SDL2.lib
